Added dagger support

--- a/example-app/src/main/res/layout/activity_main.xml
+++ b/example-app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     android:id="@+id/refresh"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="@dimen/margin">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
